--- a/app/views/homesite/contact.html.erb
+++ b/app/views/homesite/contact.html.erb
@@ -1,2 +1,12 @@
-<h1>Homesite#contact</h1>
-<p>Find me in app/views/homesite/contact.html.erb</p>
+<div class="starter-template">
+  <h1>Envie-nos seu email para podermos entrar em contato com novidades!</h1>
+  <form id="formoid"  title="" method="post" class="form">
+          <div>
+              <label class="title">Email</label>
+              <input type="text" id="email" name="email" placeholder="exemplo@exemplo.com">
+          </div>
+          <div>
+              <input type="submit" id="submitButton"  name="submitButton" value="Enviar Email">
+          </div>
+   </form>
+</div>
