--- a/app/views/homesite/home.html.erb
+++ b/app/views/homesite/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Homesite#home</h1>
-<p>Find me in app/views/homesite/home.html.erb</p>
+<div class="starter-template">
+  <h1>Homesite#home</h1>
+  <p class="lead">Find me in app/views/homesite/home.html.erb</p>
+</div>
