Fix for Turbolinks

--- a/app/views/homesite/about.html.erb
+++ b/app/views/homesite/about.html.erb
@@ -1,4 +1,4 @@
 <div class="starter-template">
-  <h1>Preço</h1>
+  <h1>About</h1>
   <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel faucibus nisi. Fusce consequat sed mi eget tempor. Suspendisse potenti. Quisque venenatis erat quam, ac pellentesque enim maximus sit amet. Sed mattis mattis pretium. Cras pellentesque eget lacus vitae aliquet. Fusce vitae nunc erat. Etiam lobortis tempor metus. Etiam luctus nulla eu eros aliquam, eu imperdiet lectus porttitor. Aliquam lacus magna, elementum vitae dui sed, pulvinar laoreet nisl. Integer aliquet, est eu commodo fringilla, ante diam porta odio, et ullamcorper turpis urna efficitur arcu. Sed scelerisque risus vel sapien venenatis aliquam. Nunc a ante ornare, accumsan augue sed, vestibulum ex. Suspendisse sit amet lacinia lectus, sit amet finibus nibh. Vivamus commodo ligula id feugiat feugiat.</p>
 </div>
