--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Project name</a>
+        <a class="navbar-brand" href="#">Site Exemplo</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><%= link_to 'Home', root_path %></li>
+          <li><%= link_to 'Preços', price_path %></li>
+          <li><%= link_to 'Contato', contact_path %></li>
+          <li><%= link_to 'About', about_path %></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
